--- a/angular-project/src/app/Components/exercise1/exercise1.component.html
+++ b/angular-project/src/app/Components/exercise1/exercise1.component.html
@@ -1,2 +1,22 @@
-<h1>Hello {{userName}}</h1>
-<p>exercise1 works!</p>
+<div id="first_container">
+    <h1 id="greeting" [style.font-family]="fontSelected">Hello {{userName | uppercase }}</h1>
+    
+    
+</div>
+<div id="main_container">
+    <h2>Enter your name and choose your greeting preference</h2>
+    <div id="settings_container">
+        <label for="name">Firstname: </label>
+        <input class="field_firstname" id="firstname" [(ngModel)]="userName"  type="text" name="firstname" placeholder="Write your firstname"  />
+        <div class="select_container">
+            <label for="font_style">Choose your favorite font family:</label>
+            <select class="list_fontfamily" name="font" id="select_ff" [(ngModel)]="optionSelected" (change)="selectOption()" >
+                <option *ngFor="let item of fontList" value="{{item}}">{{item}}</option>  
+            </select>
+        </div>
+
+        <label for="size">Font-size: </label>
+        <input class="field_size" id="fontsize" [(ngModel)]="numberSize" title="Number from 0 to 100" type="text" name="fontsize" placeholder="Write a size"  />
+    </div>
+</div>
+
