--- a/angular-project/src/app/Components/exercise1/exercise1.component.css
+++ b/angular-project/src/app/Components/exercise1/exercise1.component.css
@@ -20,7 +20,7 @@
     
 }
 h1{
-    font-size: 5rem;
+    /*font-size: 5rem;*/
     color: #a958d6;
     
 }
@@ -52,11 +52,18 @@ select{
     font-family: 'Poppins';
     font-weight:600;   
 }
-.select_container{
-    display: flex;
+.preferences_container{
+    display: flow-root;
+    width: auto;
+    align-items: center;
     /*background-color: lightcoral;*/
     margin-top: 40px;
+    margin-bottom: 40px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 6px grey;
+}
+.select_container, .fsize_container{
+    padding: 20px;
+    margin:10px;
 }
