--- a/angular-project/src/app/Components/exercise1/exercise1.component.css
+++ b/angular-project/src/app/Components/exercise1/exercise1.component.css
@@ -63,7 +63,7 @@ select{
     border-radius: 10px;
     box-shadow: 0px 0px 6px grey;
 }
-.select_container, .fsize_container{
+.select_container, .fsize_container, .aligment_container{
     padding: 20px;
     margin:10px;
 }
