--- a/angular-project/src/app/Components/exercise1/exercise1.component.html
+++ b/angular-project/src/app/Components/exercise1/exercise1.component.html
@@ -1,5 +1,5 @@
 <div id="first_container">
-    <h1 id="greeting" [style.font-family]="fontSelected" [style.fontSize.px]="numberSize">Hello {{userName | uppercase }}</h1>
+    <h1 id="greeting" [style.font-family]="fontSelected" [style.fontSize.px]="numberSize" [style.textAlign]="aligmentSelected">Hello {{userName | uppercase }}</h1>
     
     
 </div>
@@ -11,7 +11,7 @@
         <div class="preferences_container">
             <div class="select_container">
                 <label for="font_style">Choose your favorite font family:</label>
-                <select class="list_fontfamily" name="font" id="select_ff" [(ngModel)]="optionSelected" (change)="selectOption()" >
+                <select class="list_fontfamily" name="font" id="select_ff" [(ngModel)]="optionSelected" (change)="selectStyle()" >
                     <option *ngFor="let item of fontList" value="{{item}}">{{item}}</option>  
                 </select>
             </div>
@@ -19,6 +19,12 @@
                 <label for="size">Font-size: </label>
                 <input class="field_size" id="fsize" title="Number from 0 to 100" type="text" [(ngModel)]="inputSize" (keyup)="checkNumber($event)" name="fsize" placeholder="Write a size"  />
                 px
+            </div>
+            <div class="aligment_container">
+                <label for="aligment">Choose the font aligment: </label>
+                <label for="optionsAligment" *ngFor="let opt of aligmentList">
+                    <input class="field_aligment" id="fAlig_{{opt}}"  type="radio" [(ngModel)]="cbAligment" name="fAligment" value="{{opt}}" (change)="selectAligment()" /> {{opt}}
+                </label>
             </div>
         </div>
 
