menu, rooting and exercise1 finished

--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -8,7 +8,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <div id="page-container">
-  <app-exercise1></app-exercise1>
+  <app-menu></app-menu>
+  <!--<app-exercise1></app-exercise1>-->
   <router-outlet></router-outlet>
 </div>
 
