style to historic container

--- a/angular-project/src/app/Components/exercise2/exercise2.component.css
+++ b/angular-project/src/app/Components/exercise2/exercise2.component.css
@@ -38,6 +38,15 @@
     margin-bottom: 40px;
     padding: 20px;
 }
+.historic_container{
+    display: flow-root;
+    width: auto;
+    margin-bottom: 40px;
+    padding: 20px;
+}
+.historic_container h1{
+    text-align: left;
+}
 .form-label {
     margin: 10px;
 }
