--- a/angular-project/src/app/Components/exercise2/exercise2.component.html
+++ b/angular-project/src/app/Components/exercise2/exercise2.component.html
@@ -36,7 +36,7 @@
   <h2 class="display_result">Resultado: {{inicialResult}} </h2>
 </div>
 <div class="historic_container">
-  <h2>Historical</h2>
+  <h2>Historical Operations</h2>
   <div class="cards_container">
         <div class="card" style="width: 18rem;" *ngFor="let operation of calculatorService.getOperations()">
           <div class="card-header">
