exercise3 trying httpClientModule

--- a/angular-project/src/app/Components/menu/menu.component.html
+++ b/angular-project/src/app/Components/menu/menu.component.html
@@ -12,7 +12,7 @@
                 <a id="exercise_2" href="/exercise2" routerLink="/exercise2" routerLinkActive="active" class="menu-item" >Exercise 2</a>
             </li>
             <li class="exercise3">
-                <a id="exercise_3" href="" routerLink="/exercise1" routerLinkActive="active" class="menu-item" >Exercise 3</a>
+                <a id="exercise_3" href="/exercise3" routerLink="/exercise3" routerLinkActive="active" class="menu-item" >Exercise 3</a>
                 
             </li>
             
