--- a/angular-project/src/app/Components/exercise3/exercise3.component.html
+++ b/angular-project/src/app/Components/exercise3/exercise3.component.html
@@ -1,1 +1,25 @@
-<p>exercise3 works!</p>
+<div id="report_container">
+
+    <div id="first_container">
+        <h1>Bank Transaction Report</h1>
+        <p></p>
+
+    </div>
+    <div id="main_container">
+
+        <div class="filter_container">
+            <label for="lb_date">Date:</label>
+
+            <input type="date" id="f_date" name="date_field" />
+
+        </div>
+
+        <!--<div *ngFor="let dato of transactionList">
+            <p>ID: {{ dato.id }}</p>
+            <p>amount: {{ dato.amount }}</p>
+            <p>Balance: {{ dato.balance }}</p>
+            <p>Label: {{ dato.label }}</p>
+            <p>Date: {{ dato.date }}</p>
+        </div>-->
+    </div>
+</div>
